# bcm-in-nvidia-air

./: .gitattributes  .gitignore  .gitmodules  BCM on AIR design.pptx  BCM_on_AIR_customized_installation_without_cloud-init-2.md  README.md  README_AIR_LAB.md  ansible-requirements.yml  cloud-init-password.yaml  cloud-init-password.yaml.example  cm-bright-setup.conf  deploy_bcm_air.py  env.example  ifcfg-eth0  ifcfg-eth1  named.conf.global.options.include  oob-mgmt-server-customizations.sh  pyproject.toml  requirements.txt  setup-dev-repos.sh  test-bcm.dot
.ssh/: 202512002-BCM-Lab  config
ansible/: cm-bright-setup.conf.example  install_bcm.yml  node-disk-setup.xml
sample-configs/: cloud-init-password.yaml.example  env.example
scripts/: README.md  bcm_install.sh  check_setup.py  check_sim_state.py  cleanup_userconfigs.py  delete-sim.py  setup_userconfig.py  test-loop.py  test_auth.sh  test_userconfig_after_sim.py  test_userconfig_api.py  test_userconfig_curl.sh  topology_converter.py  topology_validation.py  vnc-console-connect.py
scripts/air-tests/: README.md  get_sim_info.py  list_sims.py  test_actual_content.py  test_content_size.py  test_lines.py  test_userconfig_after_sim.py  test_userconfig_api.py  test_waf_patterns.py
scripts/patches/: 11.31.0.py
tools/: check_setup.py  test_direct_auth.py  test_sdk_auth.py
topologies/: README.md  Spectrum-X Plugin (RCP) for BCM - Unconfigured.json  bcm-air-poc.json  default.json  simple-bcm.dot  test-bcm.dot  test-bcm.json  topology-design.md
topologies/default/: features.yaml  topology.json
topologies/default/bcm-config/: cm-wlm-setup.conf  interfaces.cmsh  networks.cmsh  nodes.cmsh  (+1 more)
topologies/preconfigured/: features.yaml  topology.json
(+12 files in other folders)
