[project]
name = "bcm-air-deployment"
version = "1.0.0"
description = "Automated BCM deployment on NVIDIA Air using stock Ubuntu 24.04 images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "air-sdk>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
deploy-bcm-air = "deploy_bcm_air:main"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "deploy_bcm_air.py",
    "scripts/",
    "topologies/",
]

